--- a/package.json
+++ b/package.json
@@ -5,21 +5,17 @@
   "main": "src/index.tsx",
   "author": "Der_Googler",
   "scripts": {
-    "build-dev": "webpack --mode=development",
-    "build-prod": "webpack --mode=production"
+    "dev": "webpack --config webpack.dev.ts",
+    "prod": "bun run dev && webpack --config webpack.prod.ts && rm ./dist/**/*.map"
   },
   "dependencies": {
     "@date-io/moment": "^2.14.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/core": "^5.0.0-alpha.54",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.6.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.0",
     "file-saver": "^2.0.5",
     "findbyview": "^1.0.1",
+    "googlers-tools": "^1.2.7",
     "jszip": "^3.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
@@ -36,6 +32,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-onsenui": "^2.9.17",
     "@types/react-twemoji": "^0.4.0",
+    "@types/uglifyjs-webpack-plugin": "^1.1.2",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.5",
@@ -50,7 +47,9 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.8.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
